# packages/api/src/api/models/index.ts
@@ -88,6 +88,12 @@ export * from './meetingDataResponseData';
 export * from './meetingDataResponseDataStatus';
 export * from './meetingResponse';
 export * from './meetingResponseStatus';
+export * from './patchBatchId200';
+export * from './patchBatchId200Data';
+export * from './patchBatchId400';
+export * from './patchBatchId403';
+export * from './patchBatchId404';
+export * from './patchBatchIdBody';
 export * from './patchUser200';
 export * from './patchUser200Data';
 export * from './patchUser200DataProfileStatus';
@@ -155,6 +161,7 @@ export * from './refreshTokenResponseData';
 export * from './signInWithEmailRequest';
 export * from './signUpWithEmailRequest';
 export * from './startMeetingRequest';
+export * from './updateBatchRequest';
 export * from './updateUserRequest';
 export * from './upgradeRoleRequest';
 export * from './upgradeRoleRequestNewRole';
